--- a/m4d2-homework/src/App.css
+++ b/m4d2-homework/src/App.css
@@ -17,3 +17,20 @@ ul li a:hover{
   color: aliceblue;
 }
 
+.card {
+  height: 350px;
+}
+.card img {
+  max-height: 200px;
+  max-width: 100%;
+  object-fit: cover;
+  
+}
+
+.line-clamp{
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;  
+  overflow: hidden;
+}
+
